--- a/about us/about us.html
+++ b/about us/about us.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Aprendiendo CSS</title>
+	<title>About us</title>
 	<link rel="stylesheet" type="text/css" href="about us.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,10 +14,10 @@
 	<header>
 		<nav class="nav">
 			 <ul class="nav__ul">
-					<li class="nav__li"><i class="fas fa-home"></i><a href="../home.html">Home</a></li>
-					<li class="nav__li"><i class="fas fa-heart"></i><a href="">About Us</a></li>
-					<li class="nav__li"><i class="fas fa-grin-hearts"></i><a href="">Why i love you</a></li>
-					<li class="nav__li"><i class="fas fa-globe-americas"></i><a href="">Our plans</a></li>
+					<li class="nav__li"><i class="fas fa-home"></i><a href="../index.html">Home</a></li>
+					<li class="nav__li"><i class="fas fa-heart"></i><a href="about us.html">About Us</a></li>
+					<li class="nav__li"><i class="fas fa-grin-hearts"></i><a href="../why i love you/why i love you.html">Why i love you</a></li>
+					<li class="nav__li"><i class="fas fa-globe-americas"></i><a href="../our plans/our plans.html">Our plans</a></li>
 			</ul>
 			<ul class="nav__responsive-ul">
 				<div class="responsive-button"></div>
@@ -33,12 +33,12 @@
 	<div class="Home">
 		<h1>About us</h1>
 		<img src="https://www.kindpng.com/picc/m/135-1350782_heart-render-png-transparent-png.png">
-		<p>I've made it with all my love and i hope you like it my baby. You deserve all the good, and the great in this world and more,<br>
-		I want to please you, and make you feel good and be the better husband you can have I can't wait to be there in beautiful CANADA.<br>I wish we could be together this valentine, but this quarantine has fucked up the world, but our love will always remain <3. <br>
-		There's nothing that can stop us, there's nothing that can end with this beautiful love we have, i've never been this in love with anybody in my life, you are the very best that ever happened to my life, and i'm glad you are mine, as i'm yours. <br>
-		We are the best couple in the world we'll get married, and be forever together, we will have kids, a great house!.</p>
+		<p>We are Alyssa Rose Campbell and Nicolás Gabriel Bernaola, a beautiful couple since 2019<br>
+		Alyssa was born in 26/05/1999 in CANADA and Nicolás was born in 13/07/1998 in Argentina.<br>
+		We fell in love since the first moment we've met, it was magical, as soon as we started talking, we couldn't stop doing it <br>
+		She showed me a side of the life i had never experienced until that moment, and it was a life full of love and dedication for each other.<br> As soon as we get to be in Canada, we'll move together, and we will get married and have beautiful babies!. <br>
 
-		<p id="p2">Please, check out in the menu to keep navigating in this page baby ;),Who we are :D <a href="">About us</a><br>
+		<p id="p2">Please, check out in the menu to keep navigating in this page baby ;),Back to the home <a href="../index.html">Home</a><br>
 		The reasons why i love you <3 <a href="">Why i love you</a>. And what we are gonna do in the future :) <a href="">Our plans</a> </p>
 	</div>
 </body>
