--- a/our plans/our plans.html
+++ b/our plans/our plans.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Aprendiendo CSS</title>
-	<link rel="stylesheet" type="text/css" href="home.css">
+	<title>Our plans</title>
+	<link rel="stylesheet" type="text/css" href="our plans.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,100;1,400&display=swap" rel="stylesheet">
@@ -14,10 +14,10 @@
 	<header>
 		<nav class="nav">
 			 <ul class="nav__ul">
-					<li class="nav__li"><i class="fas fa-home"></i><a href="">Home</a></li>
-					<li class="nav__li"><i class="fas fa-heart"></i><a href="">About Us</a></li>
-					<li class="nav__li"><i class="fas fa-grin-hearts"></i><a href="">Why i love you</a></li>
-					<li class="nav__li"><i class="fas fa-globe-americas"></i><a href="">Our plans</a></li>
+					<li class="nav__li"><i class="fas fa-home"></i><a href="../index.html">Home</a></li>
+					<li class="nav__li"><i class="fas fa-heart"></i><a href="../about us/about us.html">About Us</a></li>
+					<li class="nav__li"><i class="fas fa-grin-hearts"></i><a href="../why i love you/why i love you.html">Why i love you</a></li>
+					<li class="nav__li"><i class="fas fa-globe-americas"></i><a href="our plans.html">Our plans</a></li>
 			</ul>
 			<ul class="nav__responsive-ul">
 				<div class="responsive-button"></div>
