--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Aprendiendo CSS</title>
+	<title>Alyssa's Page</title>
 	<link rel="stylesheet" type="text/css" href="home.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,8 +16,8 @@
 			 <ul class="nav__ul">
 					<li class="nav__li"><i class="fas fa-home"></i><a href="index.html">Home</a></li>
 					<li class="nav__li"><i class="fas fa-heart"></i><a href="about us/about us.html">About Us</a></li>
-					<li class="nav__li"><i class="fas fa-grin-hearts"></i><a href="why i love you.html">Why i love you</a></li>
-					<li class="nav__li"><i class="fas fa-globe-americas"></i><a href="our plans.html">Our plans</a></li>
+					<li class="nav__li"><i class="fas fa-grin-hearts"></i><a href="why i love you/why i love you.html">Why i love you</a></li>
+					<li class="nav__li"><i class="fas fa-globe-americas"></i><a href="our plans/our plans.html">Our plans</a></li>
 			</ul>
 			<ul class="nav__responsive-ul">
 				<div class="responsive-button"></div>
