--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="https://kit.fontawesome.com/53f0d640e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
+	<script> alert("Welcome to your page gorgeous mami!"); </script>
 	<header>
 		<nav class="nav">
 			 <ul class="nav__ul">
