--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<script src="https://kit.fontawesome.com/53f0d640e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<script> alert("Welcome to your page gorgeous mami!"); </script>
+	<script> alert("Bienvenido a Bernaola investment center.");
+		confirm("Está a punto de entrar al lugar más cool del universo.")</script>
 	<header>
 		<nav class="nav">
 			 <ul class="nav__ul">
