--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<script src="https://kit.fontawesome.com/53f0d640e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<script> alert("Welcome to your page beautiful bababygirl!.")</script>
+	<script> nombre = prompt("Type your name :)");
+          alert("Hello " +nombre +"!")</script>
 	<header>
 		<nav class="nav">
 			 <ul class="nav__ul">
